Align the Overture import with the OSM architecture